初步完成 商品详细页面设计，转-设计登录界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".controller.ScrollingActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="main"></activity>
+        <activity android:name=".controller.GoodDetailActivity"
+            android:theme="@style/AppThemeFull.NoActionBar"
+            android:label="main"></activity>
     </application>
 
 </manifest>
