--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okio:okio:1.5.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.facebook.fresco:fresco:0.12.0'
     compile project(':sliding_mune')
 }
