--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.jcodecraeer:xrecyclerview:1.2.6'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okio:okio:1.5.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.facebook.fresco:animated-gif:0.12.0'
     compile project(':sliding_mune')
+    compile project(':CycleViewPager')
+    compile 'com.jude:rollviewpager:1.2.9'
 }
