--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity android:name=".controller.CommentActivity"
                   android:theme="@style/AppThemeFull.NoActionBar"
                   android:label="评论"></activity>
+        <activity android:name=".controller.SetActivity"
+                  android:theme="@style/AppThemeFull.NoActionBar"
+                  android:label="设置"></activity>
         <activity android:name=".controller.CommentListActivity"
         android:theme="@style/AppThemeFull.NoActionBar"
         android:label="所有评论"></activity>
